--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,7 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-vue-jsx","transform-runtime"],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
